@@ -104,6 +104,14 @@ public class ReadBoard {
       }
       List<String> jvmArgs = new ArrayList<String>();
       jvmArgs.add("-Dsun.java2d.uiScale=1.0");
+      if (Lizzie.javaVersion >= 17) {
+        jvmArgs.add("--add-opens");
+        jvmArgs.add("java.desktop/sun.awt=ALL-UNNAMED");
+        jvmArgs.add("--add-opens");
+        jvmArgs.add("java.desktop/java.awt=ALL-UNNAMED");
+        jvmArgs.add("--add-opens");
+        jvmArgs.add("java.base/java.lang=ALL-UNNAMED");
+      }
       List<String> appArgs = new ArrayList<String>();
       appArgs.add(Lizzie.resourceBundle.getString("ReadBoard.language"));
       appArgs.add(Lizzie.config.useJavaLooks ? "true" : "false");
@@ -220,10 +228,10 @@ public class ReadBoard {
       System.out.println("Board synchronization tool process ended.");
       if (!javaReadBoard && !isLoaded) {
         try {
-          Runtime.getRuntime().exec("powershell /c start readboard\\readboard.bat");
+          new ProcessBuilder("powershell", "/c", "start", "readboard\\readboard.bat").start();
         } catch (IOException e) {
           try {
-            Runtime.getRuntime().exec("powershell /c start readboard\\readboard.exe");
+            new ProcessBuilder("powershell", "/c", "start", "readboard\\readboard.exe").start();
           } catch (Exception s) {
             s.printStackTrace();
           }
